# cppFileSeperatorCleaner

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
file_cleaner/: cleaner.py
